--- a/arole_{{cookiecutter.role_name}}/env.example
+++ b/arole_{{cookiecutter.role_name}}/env.example
@@ -8,3 +8,4 @@ export APP_SECURE_TOKEN="my_token"
 export AWS_ACCESS_KEY_ID="AKIA00000000000"
 export AWS_SECRET_ACCESS_KEY="xxxx"
 export AWS_DEFAULT_REGION="us-east-1"
+export EC2_REGION="us-east-1"
