fix: Put the boto3 install into the right place

--- a/arole-{{cookiecutter.role_name}}/Makefile
+++ b/arole-{{cookiecutter.role_name}}/Makefile
@@ -35,7 +35,7 @@ molecule-test: ## Run molecule
 	( \
 	   . .venv/bin/activate; \
 	   pip install ansible yamllint ansible-lint molecule \
-		 molecule-docker molecule-ec2; \
+		 boto3 molecule-docker molecule-ec2; \
 		 bash scripts/generate_env.sh; \
 	   . ./.env && molecule test --all; \
     )
