--- a/arole-{{cookiecutter.role_name}}/molecule/ec2/converge.yml
+++ b/arole-{{cookiecutter.role_name}}/molecule/ec2/converge.yml
@@ -1,12 +1,7 @@
 ---
 - name: Converge
   hosts: all
-
-  pre_tasks:
-    - name: Update apt cache.
-      apt: update_cache=true cache_valid_time=600
-      when: ansible_os_family == 'Debian'
-      changed_when: false
-
-  roles:
-    - role: "{{ cookiecutter.github_user }}.{{ cookiecutter.role_name }}"
+  tasks:
+    - name: "Include {{ cookiecutter.role_name }}"
+      include_role:
+        name: "{{ cookiecutter.role_name }}"
