--- a/arole-{{cookiecutter.role_name}}/molecule/ec2/converge.yml
+++ b/arole-{{cookiecutter.role_name}}/molecule/ec2/converge.yml
@@ -2,6 +2,6 @@
 - name: Converge
   hosts: all
   tasks:
-    - name: "Include {{ cookiecutter.role_name }}"
+    - name: "Include {{ cookiecutter.github_user }}.{{ cookiecutter.role_name }}"
       include_role:
-        name: "{{ cookiecutter.role_name }}"
+        name: "{{ cookiecutter.github_user }}.{{ cookiecutter.role_name }}"
