fix: jinja2 escapes to clean up newlines

--- a/arole-{{cookiecutter.role_name}}/molecule/ec2/create.yml
+++ b/arole-{{cookiecutter.role_name}}/molecule/ec2/create.yml
@@ -318,4 +318,4 @@
           pause:
             seconds: "{{ platforms | map(attribute='boot_wait_seconds') | max }}"
       when: ec2_instances_async is changed
-{%- endraw %}
+{% endraw -%}
