feat: use cc vars to populate the .env

--- a/arole-{{cookiecutter.role_name}}/.env
+++ b/arole-{{cookiecutter.role_name}}/.env
@@ -9,6 +9,6 @@ export AWS_ACCESS_KEY_ID="AKIA00000000000"
 export AWS_SECRET_ACCESS_KEY="xxxx"
 export AWS_DEFAULT_REGION="us-east-1"
 export EC2_REGION="us-east-1"
-export VPC_ID="vpc-abc123"
-export SUBNET_ID="subnet-abc123"
-export AMI_ID="ami-abc123"
+export VPC_ID={{cookiecutter.vpc_id}}
+export SUBNET_ID={{cookiecutter.subnet_id}}
+export AMI_ID={{cookiecutter.ami_id}}
